tests/snapshots/compiler_error_fixtures/missing_equation_e480.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/missing_equation_e480.flx
== compile ==
failed (compile)
== diagnostics ==
error[E480]: Missing Associated Type

Instance does not define associated type `Element`, which `Collection` declares.

  examples/compiler_errors/missing_equation_e480.flx:18:1
   |
18 | instance Collection<List<a>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |     fn size_of(xs) { 1 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^
20 | }
   | ^

Hint:
  Add: `type Element<List<a>> = ...`
== stdout ==
<not executed>
