tests/snapshots/compiler_error_fixtures/missing_instance_e444.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/missing_instance_e444.flx
== compile ==
failed (compile)
== diagnostics ==
error[E444]: No Type Class Instance

No instance for `Sizeable<String>`.

  examples/compiler_errors/missing_instance_e444.flx:22:11
   |
22 |     print(size("hello"))
   |           ^^^^^^^^^^^^^

Hint:
  Add an instance: `instance Sizeable<String> { ... }`
== stdout ==
<not executed>
