tests/snapshots/compiler_error_fixtures/missing_superclass_e445.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/missing_superclass_e445.flx
== compile ==
failed (compile)
== diagnostics ==
error[E445]: Missing Superclass Instance

No instance for `Sizeable<Int>` (required by `Measurable<Int>`).

  examples/compiler_errors/missing_superclass_e445.flx:25:1
   |
25 | instance Measurable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |     fn weight(x) { x * 100 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
27 | }
   | ^

Hint:
  `Measurable` requires `Sizeable` as a superclass. Add: `instance Sizeable<Int> { ... }`
== stdout ==
<not executed>
