tests/snapshots/compiler_error_fixtures/overlapping_instances_e454.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/overlapping_instances_e454.flx
== compile ==
failed (compile)
== diagnostics ==
error[E454]: Overlapping Instances

Multiple instances match `Sizeable<List<Int>>`; instance selection would depend on declaration order.

  examples/compiler_errors/overlapping_instances_e454.flx:27:11
   |
27 |     print(size([1, 2, 3]))
   |           ^^^^^^^^^^^^^^^
== stdout ==
<not executed>
