tests/snapshots/compiler_error_fixtures/unbound_equation_e481.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/unbound_equation_e481.flx
== compile ==
failed (compile)
== diagnostics ==
error[E481]: Unbound Associated Type Variable

`b` appears in the body of `Element` but is not bound by its head.

  examples/compiler_errors/unbound_equation_e481.flx:18:5
   |
18 |     type Element<List<a>> = b
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
