tests/snapshots/compiler_error_fixtures/underivable_class_e486.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/underivable_class_e486.flx
== compile ==
failed (compile)
== diagnostics ==
error[E486]: Underivable Class

`Countable` cannot be derived for `Tally`: no usable `count` can be generated for it.

  examples/compiler_errors/underivable_class_e486.flx:18:1
   |
18 | data Tally { One, Two } deriving (Countable)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
